Update email input style in news-letter component

--- a/views/components/news-letter.html
+++ b/views/components/news-letter.html
@@ -2,7 +2,7 @@
     <div class="_container">
         <p class="-title">Get the Technologylife newsletter</p>
         <div class="-subcribe">
-            <input type="text" placeholder="you@email.com" class="">
+            <input type="text" placeholder="you@email.com" class="" style="box-shadow: none;">
             <button class="">Subscribe</button>
         </div>
         <div class="-social">
