--- a/assets/scss/pages/_post_details.scss
+++ b/assets/scss/pages/_post_details.scss
@@ -18,14 +18,14 @@
             @apply text-sm font-light pt-4;
 
             .-tags{
-                @apply flex gap-2 pt-2;
+                @apply flex flex-wrap gap-2 pt-2;
 
                 a{
-                    @apply p-2 bg-gray-600 text-gray-50;
+                    @apply px-2 py-1 bg-gray-500 border-transparent rounded text-gray-50;
                 }
 
                 a:hover{
-                    @apply bg-gray-700 text-gray-200;
+                    @apply bg-gray-600 text-gray-200;
                 }
             }
 
