--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,6 +1,6 @@
 
 .outstanding{
-    @apply w-7/12 flex flex-col gap-2 max-sm:w-full;
+    @apply w-8/12 flex flex-col gap-2 max-sm:w-full;
 
     .-items{
         .-title{
@@ -26,7 +26,7 @@
 }
 
 .latest-col{
-    @apply w-5/12 flex flex-col gap-2 overflow-hidden max-sm:w-full;
+    @apply w-4/12 flex flex-col gap-4 overflow-hidden max-sm:w-full pt-2;
 
     .-items{
         @apply flex gap-2 overflow-hidden max-h-24 max-sm:max-h-[64px];
@@ -65,13 +65,15 @@
 }
 
 .newsletter{
-    @apply w-full py-10 my-10;
+    @apply w-full py-10 my-14;
 
     ._container{
-        @apply max-w-xl mx-auto px-4 flex flex-col gap-4;
+        @apply max-w-2xl mx-auto px-4 flex flex-col gap-4;
 
         .-title{
-            @apply text-white text-3xl font-semibold text-center py-2;
+            @import url('https://fonts.googleapis.com/css2?family=Ultra&display=swap');
+            font-family: 'Ultra', sans-serif;
+            @apply text-white text-3xl font-medium text-center py-2;
         }
 
         .-subcribe{
@@ -90,7 +92,7 @@
             @apply flex gap-2 items-center justify-end;
 
             p{
-                @apply uppercase text-white font-semibold;
+                @apply uppercase text-white font-bold;
             }
         }
     }
