--- a/views/website_tag.html
+++ b/views/website_tag.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/default.html' %}
 
 {% block content %}
-<div class="main">
+<div class="main_cat">
     <!--Page title section-->
     {% include 'components/search-bar.html' %}
 
