Update responsive styles for mobile devices

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -6,11 +6,11 @@ body {
     font-family: 'Inter', sans-serif;
 }
 .my_container {
-    @apply max-w-7xl mx-auto md:px-0 lg:px-0 max-sm:px-4;
+    @apply max-w-7xl mx-auto md:px-4 lg:px-0 max-sm:px-4;
 }
 
 .main{
-    @apply pt-20 max-sm:py-2 max-sm:pt-[64px] pb-10;
+    @apply pt-10 max-sm:py-2 max-sm:pt-[64px] pb-10;
 }
 
 .main_cat{
@@ -18,10 +18,10 @@ body {
 }
 
 .section_flex{
-    @apply flex max-sm:flex-wrap gap-4;
+    @apply flex max-sm:flex-wrap max-[860px]:flex-wrap gap-4;
 
     ._main{
-        @apply w-1/2 flex flex-col gap-2 max-sm:w-full;
+        @apply w-1/2 max-sm:w-full flex flex-col gap-2 max-[860px]:w-full;
     
         .-items{
             @apply flex flex-col gap-4 max-sm:flex-row;
@@ -34,7 +34,7 @@ body {
             }
         
             .-content{
-                @apply max-sm:text-sm max-sm:hidden;
+                @apply max-sm:text-sm max-sm:hidden md:hidden lg:block;
         
                 p{
                     @apply text-justify line-clamp-2;
@@ -48,7 +48,7 @@ body {
     }
 
     ._right{
-        @apply flex flex-col gap-4 w-1/2 max-sm:w-full;
+        @apply flex flex-col gap-4 max-sm:gap-2 w-1/2 max-sm:w-full max-[860px]:w-full;
     
         .-items{
             @apply flex gap-6;
@@ -84,7 +84,7 @@ body {
     @apply flex items-center gap-2 capitalize;
 
     .-text{
-       @apply text-2xl font-semibold
+       @apply text-2xl font-semibold max-sm:text-xl md:text-2xl  hover:underline truncate;
     }
 
     .angle-right{
