--- a/views/home.html
+++ b/views/home.html
@@ -24,7 +24,7 @@
 
             <div class="latest-col">
                 <div class="border-b-2 border-black ">
-                    <span class="px-2 py-1 bg-black text-white">
+                    <span class="px-2 py-1 bg-black text-white max-sm:text-sm font-semibold">
                         Latest
                     </span>
                 </div>
