--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -1,6 +1,6 @@
 
 .outstanding{
-    @apply w-8/12 flex flex-col gap-2 max-sm:w-full;
+    @apply w-8/12 flex flex-col gap-2 max-sm:w-full max-[860px]:w-full;
 
     .-items{
         .-title{
@@ -26,7 +26,7 @@
 }
 
 .latest-col{
-    @apply w-4/12 flex flex-col gap-4 overflow-hidden max-sm:w-full pt-2;
+    @apply w-4/12 flex flex-col gap-4 overflow-hidden max-sm:w-full max-[860px]:w-full pt-2;
 
     .-items{
         @apply flex gap-2 overflow-hidden max-h-24 max-sm:max-h-[64px];
@@ -65,7 +65,7 @@
 }
 
 .newsletter{
-    @apply w-full py-10 my-14;
+    @apply w-full py-10 my-14 max-sm:py-4 max-sm:my-6;
 
     ._container{
         @apply max-w-2xl mx-auto px-4 flex flex-col gap-4;
@@ -73,7 +73,7 @@
         .-title{
             @import url('https://fonts.googleapis.com/css2?family=Ultra&display=swap');
             font-family: 'Ultra', sans-serif;
-            @apply text-white text-3xl font-medium text-center py-2;
+            @apply text-white text-3xl font-medium text-center py-2 max-sm:text-2xl max-sm:py-0;
         }
 
         .-subcribe{
