--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -3,8 +3,10 @@
     @apply w-8/12 flex flex-col gap-2 max-sm:w-full max-[860px]:w-full;
 
     .-items{
+        @apply flex flex-col gap-4;
+
         .-title{
-            @apply text-3xl max-h-[74px] overflow-hidden line-clamp-2 font-bold md:pb-4 max-sm:text-[22px] max-sm:text-center;
+            @apply text-3xl max-h-[74px] overflow-hidden line-clamp-2 font-bold max-sm:text-[22px] max-sm:text-center;
         }
     
         .-img{
@@ -32,7 +34,7 @@
         @apply flex gap-2 overflow-hidden max-h-24 max-sm:max-h-[64px];
 
         img{
-            @apply w-44 h-24 object-cover max-sm:w-32 max-sm:h-16;
+            @apply w-40 h-24 object-cover max-sm:w-32 max-sm:h-16;
         }
 
         .-title{
@@ -48,7 +50,7 @@
 .latest-row{
     @apply pt-10 max-sm:pt-2;
     .-items{
-        @apply flex lg:flex-col md:flex-col max-sm:flex-row max-sm:gap-2 max-sm:max-h-[64px];
+        @apply flex gap-2 lg:flex-col md:flex-col max-sm:flex-row max-sm:gap-2 max-sm:max-h-[64px];
     
         img{
             @apply w-full h-44 object-cover max-sm:w-32 max-sm:h-16;
