--- a/views/components/list-card-tag.html
+++ b/views/components/list-card-tag.html
@@ -12,7 +12,7 @@
                 d="m9 5 7 7-7 7" />
         </svg>
         {% else %}
-        <p class="-text">{{ tag_name }}</p>
+        <p class="-text_nudl">{{ tag_name }}</p>
         {% endif %}
     </div>
 
