--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -82,7 +82,7 @@
             @apply px-2 border border-transparent rounded bg-gray-300 flex items-center;
 
             input{
-                @apply w-full bg-transparent text-white me-10 outline-none border-0;
+                @apply w-full bg-transparent text-gray-800 me-10 outline-none border-0;
             }
 
             button{
